GCC 8 compilation error in libjli

XMLWordPrintable

    • b10

        GCC 8 reports an error:

        * For target support_native_java.base_libjli_java_md_solinux.o:
        src/java.base/unix/native/libjli/java_md_solinux.c: In function 'ContinueInNewThread0':
        src/java.base/unix/native/libjli/java_md_solinux.c:747:37: error: cast between incompatible function types from 'int (*)(void *)' to 'void * (*)(void *)' [-Werror=cast-function-type]
             if (pthread_create(&tid, &attr, (void *(*)(void*))continuation, (void*)args) == 0) {
                                             ^

        It can be silenced by explicit intermediate cast of continuation to void*.

              Assignee:
              Dmitry Chuyko
              Reporter:
              Dmitry Chuyko
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: