8215009: GCC 8 compilation error in libjli

Reviewed-by: dholmes, mikael, rriggs